environments/dev/ipl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idem-ipl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idem-ipl
  template:
    metadata:
      labels:
        app: idem-ipl
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: idem-ipl
          image: ghcr.io/tonysokolove/idem-ipl:0.0.1
          ports:
            - containerPort: 8080
