environments/dev/ipl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idem-ipl
spec:
  selector:
    app: idem-ipl
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
