environments/dev/ipl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idem-ipl
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - idem-ipl.thelid.ru
      secretName: idem-ipl-tls
  rules:
    - host: idem-ipl.thelid.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idem-ipl
                port:
                  number: 80
